# anodized

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTES.md  README.md  dbc-users.md
.github/workflows/: ci.yml
crates/anodized/: Cargo.toml  README.md
crates/anodized-core/: Cargo.toml  README.md
crates/anodized-core/src/: lib.rs  test.rs  test_instrument_fn.rs  test_parse_contract.rs  test_parse_fn_contract.rs  test_parse_spec.rs  test_util.rs  tests.rs
crates/anodized-core/src/annotate/: mod.rs  syntax.rs  tests.rs
crates/anodized-core/src/backend/: mod.rs
crates/anodized-core/src/backend/anodized/: mod.rs  test.rs  tests.rs
crates/anodized-core/src/backend/function/: mod.rs  tests.rs
crates/anodized-core/src/backend/native_contracts/: mod.rs  tests.rs
crates/anodized-core/src/backend/nightly_contracts/: mod.rs  tests.rs
crates/anodized-core/src/frontend/: mod.rs  tests.rs
crates/anodized-core/src/instrument/: mod.rs  trait_spec.rs
crates/anodized-core/src/instrument/fns/: mod.rs  tests.rs
crates/anodized-core/src/instrument/function/: mod.rs  tests.rs
crates/anodized-core/src/instrument/trait_spec/: mod.rs
crates/anodized-core/src/instrument/traits/: mod.rs
crates/anodized-core/src/tests/: mod.rs  parse_spec.rs
crates/anodized-fmt/: Cargo.toml  README.md
crates/anodized-fmt/src/: collect.rs  collect_comments.rs  config.rs  expr_fmt.rs  finder.rs  formatter.rs  lib.rs  main.rs  source_file.rs
crates/anodized-fmt/src/formatter/: expr.rs  mod.rs  spec.rs
crates/anodized-fmt/src/formatter_new/: mod.rs  spec.rs
crates/anodized-fmt/tests/: integration.rs
crates/anodized-fmt/tests/fixtures/expected/: basic_traits.rs  capture_patterns.rs  complex_spec.rs  matches_and_functions.rs  simple_function.rs  with_binds.rs  with_comments.rs
crates/anodized-fmt/tests/fixtures/input/: basic_traits.rs  capture_patterns.rs  complex_spec.rs  matches_and_functions.rs  simple_function.rs  skipped_formatting.rs  with_binds.rs  with_comments.rs
crates/anodized/src/: core.rs  lib.rs  trait_spec.rs
crates/anodized/tests/: async_function.rs  basic_enum.rs  basic_function.rs  basic_traits.rs  block_expressions.rs  captures_feature.rs  clones_feature.rs  compile-fail.rs  compile_fail.rs  default_output_pattern.rs  execution_order.rs  explicit_binding_in_postcondition.rs  method_call_invariant.rs  method_with_invariant.rs  multiple_conditions.rs  pattern_in_closure.rs  rename_return_value.rs  simple_test.rs
crates/anodized/tests/compile-fail/: captures_scope_isolation.rs  captures_scope_isolation.stderr  clones_scope_isolation.rs  clones_scope_isolation.stderr  contract-on-struct.rs  contract-on-struct.stderr  spec-on-struct.stderr
crates/anodized/tests/compile_fail/: captures_scope_isolation.rs  captures_scope_isolation.stderr  closure_validation.rs  closure_validation.stderr  internal_fn_in_impl_trait.rs  internal_fn_in_impl_trait.stderr  spec_inside_bare_trait.rs  spec_inside_bare_trait.stderr  spec_inside_trait_impl.rs  spec_inside_trait_impl.stderr  spec_on_impl_trait_const.rs  spec_on_impl_trait_const.stderr  spec_on_impl_trait_fn.stderr  spec_on_impl_trait_type.rs  spec_on_impl_trait_type.stderr  spec_on_negative_trait_impl.rs  spec_on_negative_trait_impl.stderr  spec_on_struct.rs  spec_on_struct.stderr  spec_on_trait_const.rs  spec_on_trait_const.stderr  spec_on_trait_type.rs  spec_on_trait_type.stderr
examples/: Cargo.toml  pattern_match.rs  percentage.rs  push_checked.rs  withdraw.rs
redirect-crate/: Cargo.toml  README.md
src/: lib.rs  syntax.rs
tests/: basic_enum.rs  basic_function.rs  default_output_pattern.rs  functions.rs  method_with_invariant.rs  multiple_conditions.rs  pattern_in_closure.rs  rename_return_value.rs
typo-redirect/: Cargo.toml  README.md
