[workspace]
members = [
    "crates/anodized",
    "crates/anodized-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mkovaxx/anodized"
description = "An ecosystem for correct Rust based on contract annotations"
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
keywords = ["correctness", "design-by-contract", "fuzzing", "property-based-testing", "verification"]

[workspace.dependencies]
