[package]
name = "anodized-core"
description = "Core functionality for the Anodized correctness ecosystem"

version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "extra-traits", "full"] }
