[package]
name = "anodized-core"
description = "Core functionality for the Anodized correctness ecosystem"

version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
