[package]
name = "anodized-core"
description = "Core interoperability for the Anodized specification system"

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
