[package]
name = "anodized-fmt"
description = "Formatter for #[spec] annotations in Anodized"

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "anodized-fmt"
path = "src/main.rs"

[lib]
name = "anodized_fmt"
path = "src/lib.rs"

[dependencies]
anodized-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
# File system
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
