[package]
name = "anodized-fmt"
description = "Formatter for #[spec] annotations in Anodized"

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "anodized-fmt"
path = "src/main.rs"

[lib]
name = "anodized_fmt"
path = "src/lib.rs"

[dependencies]
anodized-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

clap = { version = "4", features = ["derive"] }
crop = "0.4"
prettyplease = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1"
