[package]
name = "anodized"
description.workspace = true

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
backend-no-checks = []
backend-native-contracts = []

[dependencies]
anodized-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
rustversion.workspace = true

[dev-dependencies]
trybuild = "1.0"
