[package]
name = "anodized"
description.workspace = true

version.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
# Users should explicitly select a runtime feature when using this crate.
# The default below is for development only:
default = ["runtime-check-and-print"]
runtime-check-and-panic = []
runtime-check-and-print = []
runtime-no-check = []

[dependencies]
anodized-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
pollster = "0.4"
trybuild = "1.0"
